feat: limite de leitos + inicialização automática + correção exception handler